# passage-rs

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
passage-auth/: CHANGELOG.md  Cargo.toml  README.md
passage-auth/src/: config.rs  error.rs  lib.rs  passage.rs
passage-auth/src/apis/: authenticate.rs  current_user.rs  jwks.rs  login.rs  magic_link.rs  mod.rs  o_auth2.rs  open_id.rs  otp.rs  register.rs  tokens.rs  users.rs
passage-auth/src/models/: activate_magic_link_request.rs  activate_one_time_passcode_request.rs  add_device_finish_request.rs  add_device_start_response.rs  app.rs  apple_social_connection.rs  auth_methods.rs  auth_response.rs  auth_result.rs  authenticate_web_authn_finish_with_transaction_request.rs  authenticate_web_authn_start_with_transaction_request.rs  authenticate_web_authn_start_with_transaction_response.rs  authenticator_attachment.rs  create_passkey_readiness_request.rs  create_user_params.rs  credential.rs  credential_assertion_challenge.rs  credential_assertion_response.rs  credential_assertion_response_response.rs  credential_creation.rs  credential_creation_challenge.rs  credential_creation_public_key.rs  credential_creation_public_key_authenticator_selection.rs  credential_creation_public_key_exclude_credentials_inner.rs  credential_creation_public_key_pub_key_cred_params_inner.rs  credential_creation_public_key_rp.rs  credential_creation_public_key_user.rs  credential_creation_response.rs  credential_creation_response_response.rs  current_user.rs  current_user_device.rs  current_user_devices.rs  current_user_response.rs  (+66 more)
(+1 files in other folders)
