[package]
name = "passage-auth"
version = "0.1.2"
description = "Authentication API for Passage by 1Password"
repository = "https://github.com/Kindness-Works/passage-rs/passage-auth"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
	"base64",
	"std",
	"macros",
] }
serde_json = "^1.0"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
thiserror = "1.0.61"
jsonwebkey = { version = "0.3.5", features = ["jwt-convert"] }
jsonwebtoken = { version = "8.2.0", default-features = false }

[dev-dependencies]
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tokio-test = { version = "0.4.2" }
