[package]
name = "passage-auth"
version = "0.4.1"
description = "Authentication API for Passage by 1Password"
repository = "https://github.com/kindness-ai/passage-rs"
license = "MIT"
edition = "2021"

[dependencies]
serde = { version = "^1.0", features = ["derive"] }
serde_with = { version = "^3.8", default-features = false, features = [
	"base64",
	"std",
	"macros",
] }
serde_json = "^1.0"
url = "^2.5"
reqwest = { version = "^0.12", features = ["json", "multipart"] }
thiserror = "2.0.11"
jsonwebtoken = { version = "9.3.0", default-features = false }

[dev-dependencies]
rand = "0.9.0"
tokio = { version = "1.37.0", features = ["rt", "macros"] }
tokio-test = { version = "0.4.2" }
